@@ -1,3 +1,7 @@
+2003-01-06	blytkerchan
+	* increment.c: new file
+	* decrement.c: ditto
+
 2003-10-18	blytkerchan
 	* main.c: moved to ../test
 	* Makefile: removed
